src/objects/Configuration__c.object
<CustomObject>
    <description>For Estimation</description>
    <fields>
        <fullName>Business_Modelling_Complex__c</fullName>
        <formula>( Number_Of_Components_Complex__c  *  Estimating_Factor__r.Business_Modelling_Complex__c ) * (1 +  Contingency_Complex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Modelling Complex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Modelling_Medium__c</fullName>
        <formula>( Number_Of_Components_Medium__c  *  Estimating_Factor__r.Business_Modelling_Medium__c ) * (1 +  Contingency_Medium__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Modelling Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Modelling_Simple__c</fullName>
        <formula>( Number_Of_Components_Simple__c  *  Estimating_Factor__r.Business_Modeling_Simple__c ) * (1 +  Contingency_Simple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Modelling Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Modelling__c</fullName>
        <formula>Business_Modelling_Simple__c +  Business_Modelling_Medium__c +  Business_Modelling_Complex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Modelling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <label>Capability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contingency_Complex__c</fullName>
        <label>Contingency Complex</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contingency_Medium__c</fullName>
        <label>Contingency Medium</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contingency_Simple__c</fullName>
        <label>Contingency Simple</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Definition_Complex__c</fullName>
        <label>Definition Complex</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_Medium__c</fullName>
        <label>Definition Medium</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_Simple__c</fullName>
        <label>Definition Simple</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Complex__c</fullName>
        <formula>( Number_Of_Components_Complex__c *  Estimating_Factor__r.Deployment_Complex__c )*(1 +  Contingency_Complex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Complex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Medium__c</fullName>
        <formula>( Number_Of_Components_Medium__c *  Estimating_Factor__r.Deployment_Medium__c )*(1 +  Contingency_Medium__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Simple__c</fullName>
        <formula>( Number_Of_Components_Simple__c *  Estimating_Factor__r.Deployment_Simple__c )*(1 +  Contingency_Simple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <formula>Deployment_Simple__c  +  Deployment_Medium__c  +  Deployment_Complex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <referenceTo>Estimate__c</referenceTo>
        <relationshipName>Configuration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimating_Factor__c</fullName>
        <label>Estimating Factor</label>
        <referenceTo>Estimating_Factor__c</referenceTo>
        <relationshipLabel>Configuration</relationshipLabel>
        <relationshipName>Configuration</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Implementation_Complex__c</fullName>
        <formula>( Number_Of_Components_Complex__c *  Estimating_Factor__r.Implementation_Complex__c )*(1 +  Contingency_Complex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Complex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Medium__c</fullName>
        <formula>( Number_Of_Components_Medium__c *  Estimating_Factor__r.Implementation_Medium__c )*(1 +  Contingency_Medium__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Simple__c</fullName>
        <formula>( Number_Of_Components_Simple__c *  Estimating_Factor__r.Implementation_Simple__c )*(1 +  Contingency_Simple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <formula>Implementation_Simple__c  +  Implementation_Medium__c  +  Implementation_Complex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <label>Methodology</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Components_Complex__c</fullName>
        <label>Number Of Components Complex</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Components_Medium__c</fullName>
        <label>Number Of Components Medium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Components_Simple__c</fullName>
        <label>Number Of Components Simple</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Complex__c</fullName>
        <label>Scope Complex</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Medium__c</fullName>
        <label>Scope Medium</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Simple__c</fullName>
        <label>Scope Simple</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Design_Complex__c</fullName>
        <formula>( Number_Of_Components_Complex__c *  Estimating_Factor__r.System_Design_Complex__c )*(1 +  Contingency_Complex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Design Complex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design_Medium__c</fullName>
        <formula>( Number_Of_Components_Medium__c *  Estimating_Factor__r.System_Design_Medium__c )*(1 +  Contingency_Medium__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Design Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design_Simple__c</fullName>
        <formula>( Number_Of_Components_Simple__c *  Estimating_Factor__r.System_Design_Simple__c )*(1 +  Contingency_Simple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Design Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design__c</fullName>
        <formula>System_Design_Simple__c  +  System_Design_Medium__c  +  System_Design_Complex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Complex__c</fullName>
        <formula>( Number_Of_Components_Complex__c *  Estimating_Factor__r.Testing_Complex__c )*(1 +  Contingency_Complex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing Complex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Medium__c</fullName>
        <formula>( Number_Of_Components_Medium__c *  Estimating_Factor__r.Testing_Medium__c )*(1 +  Contingency_Medium__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Simple__c</fullName>
        <formula>( Number_Of_Components_Simple__c *  Estimating_Factor__r.Testing_Simple__c )*(1 +  Contingency_Simple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing Simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <formula>Testing_Simple__c  +  Testing_Medium__c  +  Testing_Complex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_me__c</fullName>
        <label>test me</label>
        <type>TextArea</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CON-{00000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>